WP-8849 Fix to the mobile voices page for the header overflow.

--- a/sass/conditionals/voices-detail.sass
+++ b/sass/conditionals/voices-detail.sass
@@ -21,6 +21,9 @@
     width: 1170px
     margin: 0 auto
     padding-left: 30px
+    +breakpoint($bp-for-phone-only)
+      overflow: hidden
+      width: auto
   .group-voices-group
     .field-name-field-background-color
       display: none
